feat(docs): little changes + added jail setup

--- a/linkable/twitch.mdx
+++ b/linkable/twitch.mdx
@@ -22,6 +22,12 @@ For example, to add twitch streams from the user "kaicenat" to the `#streams` ch
   <Frame caption="Setting up twitch with greed.">
   <img src="/images/twitch/twitch.gif" />
 </Frame>
+</Step>
 
+ <Step title="Example preview">
+ Here is an example on how greed previews twitch streams 
+<Frame caption= "Example of greed notifying">
+ <img src="/images/twitch/twitch.png" />
+ </Frame>
 </Step>
 </Steps>
