--- a/server-config/anti-nuke.mdx
+++ b/server-config/anti-nuke.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Anti-nuke"
+title: "Anti nuke"
 description: "Anti-raid in Discord is like a protective barrier that keeps your server safe from trolls and spammers trying to crash your online party."
 ---
 
