--- a/server-config/anti-raid.mdx
+++ b/server-config/anti-raid.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Anti-raid"
+title: "Anti raid"
 description: "Anti-raid in Discord is like a protective barrier that keeps your server safe from trolls and spammers trying to crash your online party."
 ---
 
